# credit-risk-estimation

./: README.md  main.py  metrics.json  mlflow.db  pyproject.toml  requirements.txt
.github/workflows/: tests.yaml
mlruns/1/models/m-13fc4a37bc3a4a808abd1e74199e1e9a/artifacts/: MLmodel  model.pkl  registered_model_meta
mlruns/1/models/m-196fda5773914a4a9e6dc9bd56c23c24/artifacts/: MLmodel  conda.yaml  model.pkl
mlruns/1/models/m-7339a922402c44378712659d5fd8d51a/artifacts/: MLmodel
mlruns/1/models/m-fb5c1a8ddbf0435a9f117e082174786a/artifacts/: MLmodel
notebooks/: workspace.ipynb
serve/src/: app.py
serve/src/helpers/: request.py
serve/src/registry/mlflow/: handler.py
tests/: test_data.py  test_metrics.py  test_training.py
training/: classifier.py
